--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .darkBackground {
-    background: #eec643
+    background: #222222
 }
 
 .lightBackground {
-    background: #eef0f2;
+    background: #eeeeee;
 }
 
 .imageBackground {
@@ -11,23 +11,48 @@
 }
 
 .navLinkGroup ul li a {
-    color: #ffffff
+    color: #eeeeee
 }
 
 .navLinkGroup ul li a:hover {
-    color: #363636;
+    color: #aaaaaa;
 }
 
 .navLink {
-    color: #ffffff;
+    color: #eeeeee;
     text-decoration: none;
 }
 
 .navLink:hover {
-    color: #363636;
+    color: #aaaaaa;
     text-decoration: underline;
 }
 
+/* Images /////////////////////////////////////////////////////////////*/
+
+.displayRight {
+    float: right;
+}
+
+
+.displayLeft {
+    float: left;
+}
+
+.leftRightPair {
+    width: 60%;
+    height: 400px;
+    margin:auto;
+    padding: 0;
+}
+
+.leftRightPair::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Full page //////////////////////////////////////////////////////////*/
 
 body {
     margin: 0;
@@ -35,19 +60,48 @@ body {
     font-weight: 300;
 }
 
-h1 {
-    font-family: arial, sans-serif;
-    font-size: 30;
-    color: #555555;
-}
-
 .container{
     width: 80%;
     margin: 0 auto;
 }
 
-header{
-    background: #356063;
+/* Text /////////////////////////////////////////////////////////*/
+
+h1 {
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-family: arial, sans-serif;
+    font-size: 30;
+    color: #eeeeee;
+}
+
+h2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+}
+
+h3 {
+    vertical-align: middle;
+}
+
+p1 {
+    padding: 0 0;
+    color: #aaaaaa;
+}
+
+p2 {
+    display: block;
+    margin: auto;
+    width: 800px;
+}
+
+
+/* Header ///////////////////////////////////////////////////////////*/
+
+header {
+    margin-top: -21px;
 }
 
 header::after {
@@ -56,7 +110,7 @@ header::after {
     clear: both;
 }
 
-/* Navbar layout */
+/* Navbar layout /////////////////////////////////////////////////////////////////////////////*/
 
 .navbarLogo {
     float: left;
@@ -77,6 +131,7 @@ nav li {
     display: inline-block;
     margin-left: 100px;
     padding-top: 15px;
+    padding-bottom: 15px;
 
     position: relative;
 }
@@ -87,7 +142,7 @@ nav ul li a {
     font-size: large;
 }
 
-/* Navbar hover effects */
+/* Navbar hover effects /////////////////////////////////////////////////////////////////////*/
 
 
 nav ul li a::before {
@@ -107,7 +162,7 @@ nav ul li a:hover::before{
     width: 100%;
 }
 
-/* Footer */
+/* Footer //////////////////////////////////////////////////////////////////////*/
 
 footer {
     position: absolute;
@@ -130,7 +185,7 @@ footer a:hover{
     text-decoration: underline;
 }
 
-
+/*/////////////////////////////////////////////////////////////////////////////////
 
 
 
