--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     text-decoration: underline;
 }
 
-/* Images /////////////////////////////////////////////////////////////*/
+/* Content /////////////////////////////////////////////////////////////*/
 
 .displayRight {
     float: right;
