--- a/webdevstuff/style.css
+++ b/webdevstuff/style.css
@@ -22,7 +22,7 @@ body
   transition: 300ms ease-in-out;
 }
 
-a{
+.buttons a{
   color: #cfccc6;
   text-decoration: none;
   border: 2pt solid #cfccc6;
@@ -34,7 +34,7 @@ a{
   transition: 150ms ease-in-out;
 }
 
-a:hover{
+.buttons a:hover{
   color: #d46c04;
   border: 2pt solid #d46c04;
   transform: scale(1.1);
@@ -66,6 +66,17 @@ a:hover{
 {
   padding-bottom: 2%;
   width: 300px;
+}
+
+.project a{
+  text-decoration: underline;
+  color: #cfccc6;
+  transition: 100ms ease-in-out;
+}
+
+.project a:hover{
+  color: #d46c04;
+  transition: 200ms ease-in-out;
 }
 
 
