--- a/webdevstuff/style.css
+++ b/webdevstuff/style.css
@@ -10,6 +10,15 @@ body
   background: #242526;
 }
 
+.jsdemo {
+  width: 98%;
+  height: 98vh;
+  position: absolute;
+  z-index: -1;;
+  top: 5%;
+  left: 8%;
+}
+
 .canvas-container{
   color: #242526;
   text-align: center;
@@ -56,10 +65,34 @@ body
   transition: 150ms ease-in-out;
 }
 
+.large-project-container{
+  margin-top: 30%;
+  overflow: hidden;
+}
+
+.large-project{
+  width: 44%;
+  height: 350px;
+  padding: 0px;;
+  overflow: hidden;
+}
+
+.large-project object{
+  margin: 0;
+  padding: 0px;
+  overflow: hidden;
+}
+
+
 .project:hover{
   border: 4px solid #d46c04;
   transition: 200ms ease-in-out;
   padding: 4px;
+}
+
+.large-project:hover{
+  padding: 0px;
+  border: 3px solid #d46c04;
 }
 
 .project img
