--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body
   transition: 200ms ease-in-out;
 }
 
-.physsim
+.fullpage-project
 {
   display: inline-block;
   border: 3px solid #cfccc6;
@@ -59,36 +59,35 @@ body
   width: 80%;
   height:30%;
   vertical-align: middle;
-  margin-left: 3%;
+  margin-left: 5%;
   margin-top: 3%;
   padding: 15px;
   transition: 150ms ease-in-out;
 }
 
-.physsim img{
+.fullpage-project img{
   display: inline-block;
 }
 
-.physsim div{
+.fullpage-project div{
   display: inline-block;
-  width: 70%;
   margin-left: 5%;
 }
 
 
-.physsim:hover{
+.fullpage-project:hover{
   border: 4px solid #d46c04;
   transition: 200ms ease-in-out;
   padding: 14px;
 }
 
-.physsim a{
+.fullpage-project a{
   text-decoration: underline;
   color: #cfccc6;
   transition: 100ms ease-in-out;
 }
 
-.physsim a:hover{
+.fullpage-project a:hover{
   color: #d46c04;
   transition: 200ms ease-in-out;
 }
