--- a/style.css
+++ b/style.css
@@ -1,291 +1,121 @@
-:root {
+@media screen and (max-width: 1000px){
+  :root {
     /* --bgcol: #444433; */
     --bgcol: #242526;
     --textcol: #cfccc6;
     --highlight:#d46c04;
     background: var(--bgcol);
     color: var(--textcol);
+
+    --paragraphtext: 24pt;
+    --headingtext: 36pt;
+    --smalltext: 27pt;
+    --mediumtext: 36pt;
+    --largetext: 72pt;
+  }
+
+body {
+    width: 90%;
+    margin: auto;
+    margin-top: 20%;
 }
 
-@font-face {
-  font-family: oswald;
-  src: url(Oswald-Regular.ttf);
+.image-block {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    align-content: center;
 }
 
-body
-{
-  font-family: sans-serif;
-  font-weight: bold;
-  background: var(--bgcol);
+  .image-block div {
+    width: 100%;
+    margin: auto;
+  }
+
+  .image-block img {
+    max-height: 70vh;
+    max-width: 90vw;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
 }
 
-.jsdemo {
-  width: 98%;
-  height: 98vh;
-  position: absolute;
-  z-index: -1;;
-  top: 5%;
-  left: 8%;
-}
-
-.canvas-container{
-  color: #242526;
-  text-align: center;
-  padding: 10px;
-  transition: 1000ms ease-in-out;
-}
-
-.canvas-container:hover{
-  color: var(--textcol);
-  transition: 300ms ease-in-out;
-}
-
-.buttons a{
-  color: var(--textcol);
-  text-decoration: none;
-  border: 2pt solid var(--textcol);
-  padding: 5pt;
-  font-size: 18pt;
-  display: inline-block;
-  margin-top: 5%;
-  margin: 1%;
-  transition: 150ms ease-in-out;
-}
-
-.buttons a:hover{
-  color: var(--highlight);
-  border: 2pt solid var(--highlight);
-  transform: scale(1.1);
-  transition: 200ms ease-in-out;
-}
-
-.physsim
-{
-  display: inline-block;
-  border: 3px solid var(--textcol);
-  border-radius: 5px;
-  color: var(--textcol);
-  width: 80%;
-  height:30%;
-  vertical-align: middle;
-  margin-left: 3%;
-  margin-top: 3%;
-  padding: 15px;
-  transition: 150ms ease-in-out;
-}
-
-.physsim img{
-  display: inline-block;
-}
-
-.physsim div{
-  display: inline-block;
-  width: 70%;
-  margin-left: 5%;
-}
-
-
-.physsim:hover{
-  border: 4px solid var(--highlight);
-  transition: 200ms ease-in-out;
-  padding: 14px;
-}
-
-.physsim a{
-  text-decoration: underline;
-  color: var(--textcol);
-  transition: 100ms ease-in-out;
-}
-
-.physsim a:hover{
-  color: var(--highlight);
-  transition: 200ms ease-in-out;
-}
-
-.project
-{
-  display: inline-block;
-  border: 3px solid var(--textcol);
-  border-radius: 5px;
-  color: var(--textcol);
-  width: 300px;
-  height:350px;
-  vertical-align: middle;
-  margin-left: 3%;
-  margin-top: 3%;
-  padding: 5px;
-  transition: 150ms ease-in-out;
-}
-
-.large-project-container{
-  margin-top: 30%;
-  overflow: hidden;
-}
-
-.large-project{
-  width: 44%;
-  height: 350px;
-  padding: 0px;;
-  overflow: hidden;
-}
-
-.large-project object{
-  margin: 0;
-  padding: 0px;
-  overflow: hidden;
-}
-
-
-.project:hover{
-  border: 4px solid var(--highlight);
-  transition: 200ms ease-in-out;
-  padding: 4px;
-}
-
-.large-project:hover{
-  padding: 0px;
-  border: 3px solid var(--highlight);
-}
-
-.project img
-{
-  padding-bottom: 2%;
-  width: 300px;
-}
-
-.project a{
-  text-decoration: underline;
-  color: var(--textcol);
-  transition: 100ms ease-in-out;
-}
-
-.project a:hover{
-  color: var(--highlight);
-  transition: 200ms ease-in-out;
-}
-
-
-.container
-{
-  display: inline-block;
-  position: relative;
-}
-
-.half
-{
-  width: 49%;
-}
-
-.partial
-{
-  width: 70%;
-}
-
-.full
-{
-  width: 90%;
-}
-
-p{
+@media screen and (min-width: 1000px){
+  :root {
+    /* --bgcol: #444433; */
+    --bgcol: #242526;
+    --textcol: #cfccc6;
+    --highlight:#d46c04;
+    background: var(--bgcol);
     color: var(--textcol);
-    margin: 5%;
-    margin-top: 0;
-    
+
+    --paragraphtext: 12pt;
+    --headingtext: 16pt;
+    --smalltext: 18pt;
+    --mediumtext: 27pt;
+    --largetext: 36pt;
+  }
+
+
+body {
+    width: 90%;
+    margin: auto;
+    margin-top: 5%;
 }
 
-.title
-{
-  margin-top: 10%;
-  margin-left:10%;
-}
-
-.subtitle
-{
-    margin-top: 10%;
-    margin: 5%;
-    margin-bottom: 2%;
+.image-block {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    align-content: center;
 }
 
 
-.smiley
-{
-  display: inline-block;
-  margin: None;
-  padding: None;
-  width: 0;
-  font-size: 24pt;
-  transform: rotate(90deg) translateY(70px) translateX(-40px);
-  color: var(--textcol);
+  .image-block div {
+    width: 70%;
+  }
+
+  .image-block img {
+    max-width: 20vw;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
 }
 
-.big
-{
-  font-size: 81pt;
+
+.content {
+    width: 90%;
+    margin: auto;
+    margin-top: 3%;
 }
 
-.medium
-{
-    font-size: 36pt;
-}
-
-.small
-{
-  font-size: 18pt;
-}
-
-.letter
-{
-  display: inline-block;
-  margin: None;
-  padding: None;
-  color: var(--textcol);
-  transition: 100ms ease-in-out;
-}
-
-.letter:hover
-{
-  color: var(--highlight);
-  transform: scale(1.2);
-  transition: 200ms ease-in-out;
-}
-
-.r
-{
-  transform: translateX(-25px);
-}
-
-.r:hover
-{
-  transform: translateX(-25px) scale(1.2);
-}
-
-.l
-{
-  transform: none
-}
-
-.l:hover
-{
-  transform: scale(1.2)
-}
-
-.content
-{
-    margin-top: 10%;
-    margin-left: 20%;
-    width: 60%;
+h1 {
     text-align: center;
-    color:var(--textcol);
-    padding-bottom: 10%;
+    font-size: var(--largetext);
 }
 
-.content a
-{
-    color: var(--textcol);
+h2 {
+    font-size: var(--mediumtext);
 }
 
-.content a:hover
-{
-    color:var(--highlight);
-    transition: ease-in-out 100ms;
+h3 {
+    font-size: var(--smalltext);
+}
+
+p {
+    font-size: var(--paragraphtext);
+    width: 90%;
+}
+
+a {
+    color: var(--highlight)
+}
+
+.darkmode {
+    position: absolute; 
+    top: 5%; 
+    right: 5%; 
+    font-size: var(--smalltext);
 }
